<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Math Quiz - Fanny Freyre</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">My Math Quiz</string>
    <string name="second_fragment_label">Select Difficulty</string>
    <string name="third_fragment_label">Easy</string>
    <string name="fourth_fragment_label">Intermediate</string>
    <string name="fifth_fragment_label">Advanced</string>
    <string name="score_board">Scoreboard</string>
    <string name="math_quiz_name">My Math Quiz</string>
    <string name="play">Play</string>
    <string name="hint_name">Enter username</string>
    <string name="last_user">Last User: %1$s</string>
    <string name="current_user">Current User</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="lvl_easy">Easy</string>
    <string name="lvl_intermediate">Intermediate</string>
    <string name="lvl_advanced">Advanced</string>
    <string name="score_easy">Score - Easy</string>
    <string name="score_intermediate">Score - Intermediate</string>
    <string name="score_advanced">Score - Advanced</string>
    <string name="question_number">Questions: %1$d / %2$d</string>
    <string name="correct_answer">CORRECT!</string>
    <string name="incorrect_answer">INCORRECT!</string>
    <string name="score">Score: %1$d </string>
    <string name="default_score">Score: 0</string>
    <string name="timer">01:00</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="last_score">LAST SCORE: %1$d</string>
    <string name="top_five_scores">TOP FIVE SCORES</string>
    <string name="best_1">BEST1: %1$d - %2$s</string>
    <string name="best_2">BEST2: %1$d - %2$s</string>
    <string name="best_3">BEST3: %1$d - %2$s</string>
    <string name="best_4">BEST4: %1$d - %2$s</string>
    <string name="best_5">BEST5: %1$d - %2$s</string>
    <string name="new_game">New Game</string>
</resources>