<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectLevel">

    <TextView
        android:id="@+id/textview_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_difficulty"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@id/btnEasy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="25dp"
        android:text="@string/lvl_easy"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/btnIntermediate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_levels" />

    <Button
        android:id="@+id/btnIntermediate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="25dp"
        android:text="@string/lvl_intermediate"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdvanced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEasy" />

    <Button
        android:id="@+id/btnAdvanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="25dp"
        android:text="@string/lvl_advanced"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIntermediate" />

</androidx.constraintlayout.widget.ConstraintLayout>