<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/easyQuizLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EasyQuiz">

    <RelativeLayout
        android:id="@+id/easyRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvCurrentUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/current_user"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvQuestionNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCurrentUser"
            android:text="@string/question_number"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQuestionNo"
            android:layout_marginTop="5dp"
            android:text="@string/default_score"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/timer"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/radioGroup"
            android:layout_marginBottom="10dp"
            android:text="Question will be here..."
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 1"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 2"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 3"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Option 4"
                android:textSize="20sp"/>
        </RadioGroup>
        <TextView
            android:id="@+id/tvCorrect_Incorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCorrect_Incorrect"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>